-----
# Added
- Implemented "println" functions for all typed interfaces that simply call
  "print" and then print a newline through the specified stream
- Implemented "-p" option in the lexer test
- Updated test_utils.h to use the new "println" implementation

# Changed
- Switched from GNU Autotools to CMake for building, testing and installing
- Updated tools/update_docs.sh script for CMake

# Removed
- Removed useless pnode_t definition


0.8.0
-----
# Added
- Implemented lexer__print function
- Implemented lexer lexeme extraction
- Implemented boolean in struct lexer_state to indicate that the end of the
  stream has been reached
- Implemented parse_tree__num_children function

# Changed
- Dashes "-" are now printed instead of blanks when printing SLR tables, this
  is helpful for awk to print the right columns


0.7.0
-----
# Added
- Implemented int__compare, int__equals, and char__compare, char__equals
  functions
- Implemented production__print function
- Implemented grammar and test
- Implemented first set computation and test
- Implemented follow set computation and test
- Implemented LR(0) item and test
- Added a pnode_t definition to the common typed header
- Implemented computation of the set of sets of LR(0) items for Simple LR and
  test
- Implemented computation of the ACTION and GOTO tables for Simple LR and test

# Changed
- Typed interfaces now include the common typed functions header for
  convenience
- Changed fpfdata_int, fpfdata_char, and fpfdata_str function names to
  int__print, char__print and string__print
- Renamed fpfdata_test to print_test
- Renamed all "print_data" symbols to "print"

# Removed
- Removed pnode_t definitions from all files that defined it locally in favour
  of the single definition that now lives in the common typed header


0.6.1
-----
# Fixed
- trie:
  - Fixed conditions that decide the validity of a key, resulting in the
    following fixes:
    - "in" function no longer returns 1 when the trie is empty