@@ -3,8 +3,8 @@
 #include "libsapling/cc/parser/follow.h"
 #include "libsapling/cc/parser/goto.h"
 #include "libsapling/cc/parser/action_table.h"
-#include "libsapling/cc/parser/aux/production_set.h"
-#include "libsapling/cc/parser/aux/set_of_sets_of_lr0_items.h"
+#include "libsapling/cc/parser/defs/production_set.h"
+#include "libsapling/cc/parser/defs/set_of_sets_of_lr0_items.h"
 
 struct action_table {
     int action;
