@@ -1,6 +1,6 @@
 #include "libsapling/cc/parser/grammar.h"
-#include "libsapling/cc/parser/aux/production_set.h"
-#include "libsapling/cc/parser/aux/set_of_lr0_items.h"
+#include "libsapling/cc/parser/defs/production_set.h"
+#include "libsapling/cc/parser/defs/set_of_lr0_items.h"
 
 struct info_closure_1 {
     int *repeat;
