@@ -1,10 +1,10 @@
 #! /bin/sh
 
-for test in $(find test -name *_test)
+for test in $(find . -name "*_test.out")
 do
     if [[ $test == "test/equivalence_class_test" ]]; then continue; fi
     if [[ $test == "test/terminal_test" ]]; then continue; fi
     if [[ $test == "test/production_test" ]]; then continue; fi
-    if [[ $test == "test/fpfdata_test" ]]; then continue; fi
+    if [[ $test == "test/print_test" ]]; then continue; fi
     echo "$test -g | sh ../tools/viz" | sh
 done
